src/objects/Revenue_Category__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_code__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_category_id__c</fullName>
        <label>Revenue category id</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Revenue Category</label>
    <nameField>
        <displayFormat>RC-{00}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>